# pythoning_stuff

./: .gitignore  README.md  allrequirements.txt  exercise-underfitting-and-overfitting.ipynb  fibo.py  filter.py  main.py  overrides.json  plotting.ipynb  pyproject.toml  python_tools_ref.md  star.py  untitled
.virtual_documents/mathml/: Untitled.ipynb
NN/: BuildingClassificationofCNCwithDNN.ipynb  classify_trn_tst_mixed.ipynb  effNet_bad_df_sepr_data_with_visul.ipynb  test_individually_expr1.ipynb  training_expr1.ipynb  v2Test_BuildingImageRecognizationof_Batch_Test_WithoutWeightFreeze.ipynb
NN/FlowerClassification/: FlowerClassificationofFlowersWithDNN.ipynb  FlowerClassificationofFlowersWithDNNWithOutWeightFreeze.ipynb  TestingFlowerImageRecognizationofCNC.ipynb  TestingFlowerImageRecognizationofCNCBatchTesting.ipynb  TestingFlowerImageRecognizationofCNCBatchTestingWithoutWeightFreeze.ipynb
NN/build_cnn/: ALL_IMG_DATA.csv  all_in_1_parameter_changable_(2_output).ipynb  expr1_resnet18.ipynb  expr1_resnet18_with_lr_scheduler.ipynb  expr2_resnet18_two_output.ipynb  make_train_test_split_from_all_img_data.ipynb
NN/build_cnn2/: all_in_one_parameter_changable.ipynb  data.csv  expr1_effnet_b1_40_accy.ipynb  expr2_effnet.ipynb  make_csv_data.ipynb  maximize_dataset_make_csv_data.ipynb
basic_ml/: 0requirements.txt  0workspace.jupyterlab-workspace  ClassificationofWine.slides.html  Placement_prediction.html  Placement_prediction.slides.html  README_setup.md  learning_CNN.ipynb  plant_growth_analyze.ipynb  plant_growth_analyze.slides.html
cg_algo/: circledraw.ipynb  ellispedraw.ipynb  linedraw.ipynb  transformation.ipynb
cvisiontrack/: 0requirements.txt  cvdraw.py  drawui.py  drawwithhandui.py  getwebcam.py  trackhandtest.py
learn/: .mambarc  SOM.ipynb  environment.yml  exercise-underfitting-and-overfitting.ipynb  genetic_algo.ipynb  hebbian_learning.py  perceptronNN.ipynb  perceptronlog.py
mathml/: 0requirements.txt  ClassificationofWine.ipynb  Placement_prediction.ipynb  README_setup.md  Untitled.ipynb  abc.py  plant_growth_analyze.ipynb
mathml/.ipynb_checkpoints/: 0requirements-checkpoint.txt  Untitled-checkpoint.ipynb
mathml/.ipython/profile_default/: history.sqlite
mathml/.jupyter/: jupyter_server_config.py  migrated
mathml/.jupyter/lab/user-settings/@jupyter-lsp/jupyterlab-lsp/: completion.jupyterlab-settings
mathml/.jupyter/lab/user-settings/@jupyterlab-contrib/spellchecker/: plugin.jupyterlab-settings
mathml/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
mathml/.jupyter/lab/user-settings/@jupyterlab/completer-extension/: inline-completer.jupyterlab-settings  manager.jupyterlab-settings
mathml/.jupyter/lab/user-settings/@jupyterlab/console-extension/: tracker.jupyterlab-settings
mathml/.jupyter/lab/user-settings/@jupyterlab/docmanager-extension/: plugin.jupyterlab-settings
mathml/.jupyter/lab/user-settings/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
mathml/.jupyter/lab/user-settings/jupyterlab_code_formatter/: settings.jupyterlab-settings
misleneous/: 1.py  gcd.ipynb  lambda.py  mapping.py  nil.txt  plotting.ipynb  s.py  untitled  untitled.c
(+1 files in other folders)
