[project]
name = "pythoning-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "jupyter-suggestions>=0.1.1",
    "jupyter-suggestions-core>=0.1.1",
    "jupyterlab>=4.4.2",
    "jupyterlab-cell-flash>=0.4.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-git>=0.51.1",
    "jupyterlab-night>=0.5.1",
    "jupyterlab-pytutor>=0.2.0",
    "jupyterlab-rise>=0.43.1",
    "jupyterlab-spellchecker>=0.8.4",
    "jupyterlab-widgets>=3.0.15",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyright>=1.1.400",
    "ruff>=0.11.9",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "spyder>=3.3.6",
]
